Fix minor logo alignment issue.

--- a/editions/etti_2014/css/main.css
+++ b/editions/etti_2014/css/main.css
@@ -237,7 +237,6 @@ table {
 }
 
 .sponsor_logo_td {
-  padding: 15px;
   vertical-align: top;
 }
 
